# nanopt

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/accel/: bvh.cpp  bvh.hpp  primitive_list.cpp  primitive_list.hpp
src/camera/: camera.hpp  pinhole_camera.cpp  pinhole_camera.hpp
src/geometry/: aabb.hpp  hit.hpp  primitive.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/image/: framebuffer.cpp  framebuffer.hpp  ppm.cpp  ppm.hpp
src/integrator/: direct_integrator.cpp  direct_integrator.hpp  integrator.hpp  path_integrator.cpp  path_integrator.hpp
src/io/: obj_loader.cpp  obj_loader.hpp
src/light/: area_light.cpp  area_light.hpp  light.hpp  point_light.cpp  point_light.hpp
src/material/: bsdf.hpp  conductor.cpp  conductor.hpp  conductor_data.cpp  conductor_data.hpp  dielectric.cpp  dielectric.hpp  fresnel.hpp  lambertian.cpp  lambertian.hpp  microfacet.hpp  sellmeier.hpp
src/math/: frame.hpp  normal3.hpp  point3.hpp  ray.hpp  sampling.hpp  vec3.hpp
src/sampler/: rng.hpp  sampler.hpp  uniform_sampler.cpp  uniform_sampler.hpp
src/scene/: scene.cpp  scene.hpp
src/spectrum/: cie.cpp  cie.hpp  rgb_spectrum.hpp  rgb_upsample.cpp  rgb_upsample.hpp  sampled_spectrum.hpp  spectrum.hpp  wavelength.cpp  wavelength.hpp
